# mlipff

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
src/mlipff/: al_md_mlp.py  al_md_mtp.py  cli.py  frames_processing.py  learn_from_files.py  mlipff.py  mlipff_configuration.py  utils.py
